<resources>
    <string name="item_enable">Enable</string>
    <string name="item_disabled">Disabled</string>
    <string name="item_save">Save</string>
    <string name="item_delete">Delete</string>
    <string name="item_default">Default</string>
    <string name="item_return">Go Back</string>
    <string name="item_never">Never</string>
    <string name="item_on">On</string>
    <string name="item_off">Off</string>
    <string name="item_error">Error</string>
    <string name="item_offline">Offline</string>
    <string name="item_msecs">(msecs)</string>
    <string name="item_msecs2">msecs</string>
    <string name="item_na">N/A</string>
    <string name="item_view">View</string>
    <string name="item_folder">Folder</string>
    <string name="item_file">File</string>
    <string name="item_pdir">Parent Directory</string>
    <string name="msg_no_net">No Internet Access Detected</string>
    <string name="msg_reboot">Reboot is recommended.</string>
    <string name="msg_kernelbug1">Your kernel may have a bug, please forward this URL link to your ROM/Kernel developer. You may experience lag using the CPU section of this app.</string>
    <string name="msg_fatal_error">Fatal Error, please see notification drawer.</string>
    <string name="msg_no_su">Please restart me with root permissions.</string>
    <string name="msg_lp_no_su">While Tame no longer requires SuperSU on Lollipop, I still suggest using it to avoid any potential issues.</string>
    <string name="msg_uid_change">It appears that you previously used Tame from a different device. While you shouldn\'t run into any problems, you may consider resetting my data.</string>
    <string name="msg_wk_detect">WildKernel Detected</string>
    <string name="msg_changes_reboot">Reboot your device for the changes to take effect.</string>
    <string name="msg_edit_caution">Edit Values with Caution</string>
    <string name="msg_value_saved">Value saved.</string>
    <string name="msg_value_saved_rab">Value saved, and queued to Run At Boot.</string>
    <string name="msg_value_saved_prop">Value saved, and added to forced properties.</string>
    <string name="msg_sobfail">An error occured when restoring your settings, click me to retry.</string>
    <string name="msg_no_smp">You most likely have a non-kernel based plug manager.</string>
    <string name="msg_primary">Primary</string>
    <string name="msg_core">Core</string>
    <string name="page_main">Tame</string>
    <string name="page_cpusettings">Processor</string>
    <string name="page_generalsettings">Other</string>
    <string name="page_kernelsettings">Kernel</string>
    <string name="page_settings">Settings</string>
    <string name="page_fauxsound">FauxSound</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item_sob">Restore Settings on Boot</string>
    <string name="item_restore_settings_now">Restore Settings Now</string>
    <string name="msg_restored_settings">Restored saved settings.</string>
    <string name="item_sum_sob">Android naturally resets most kernel settings to default after a reboot. Enabling this will restore your custom settings.</string>
    <string name="msg_sobnote">After a reboot, Tame may take a minute or two to restore settings.\n\n In the event that you screwed up and you want to disable Tame Settings from recovery, there is a flash-able zip on your sdcard.\n\n</string>
    <string name="msg_sobstatus">Last Restored Settings:</string>
    <string name="msg_rabstatus">Last Executed Commands:</string>
    <string name="msg_propstatus">Last Changed Build.prop:</string>
    <string name="msg_dsob">All of Tame\'s startup services have been disabled. You will have to re-enable them yourself. Keep in mind all your Tame data is still saved, just not applied.</string>
    <string name="msg_dsob_extractfail">Failed to extract zip to %1$s. Do you have an sdcard?</string>
    <string name="msg_dsob_extract">Extracted emergency zip to %1$s. Flash in recovery when you wish to disable automatic restore.</string>
    <string name="item_view_settings">View Database</string>
    <string name="item_check_updates">Check for Updates</string>
    <string name="item_sum_check_updates">Check for an update to Tame or WildKernel on boot.</string>
    <string name="msg_checking_update">Checking for Updates ...</string>
    <string name="msg_latest_update">Latest Version</string>
    <string name="msg_update_available">Click to Update</string>
    <string name="item_bln">Button Light Notifications</string>
    <string name="item_sum_bln">Pulse button lights when a notification is received.</string>
    <string name="item_ebln">Enhanced Button Light Notifications</string>
    <string name="item_hbln">Home Button Light Notifications</string>
    <string name="item_touchkey_bln_override_pattern">Blink Style</string>
    <string name="item_duration">Duration:</string>
    <string name="item_timeout">Timeout:</string>
    <string name="item_bln_override_interval">Override Blink Intervals</string>
    <string name="item_bln_test">Test Notification</string>
    <string name="item_bln_override_color">Override Color</string>
    <string name="msg_blinks">Blinks</string>
    <string name="msg_bln_preset">Using preset light intervals</string>
    <string name="msg_bln_preset2">BLN: Using default light intervals (300/1500msecs).</string>
    <string name="msg_minutes">minute(s)</string>
    <string name="item_wake">Wake Management</string>
    <string name="item_sum_wake">Configure different ways to wake your device from sleep.</string>
    <string name="item_s2w">Sweep2Wake</string>
    <string name="item_s2s">Sweep2Sleep</string>
    <string name="item_s2w_sens">Sensitive Detection</string>
    <string name="item_dt2w">DoubleTap2Wake</string>
    <string name="item_panel_uv">Display Voltage</string>
    <string name="item_sum_panel_uv">Reducing the screen\'s power consumption can improve battery life.</string>
    <string name="item_note_panel_uv">Colors may appear slightly distorted, but this is safe to use.</string>
    <string name="msg_default_volt">Default Voltage</string>
    <string name="msg_undervolt">Undervolt:</string>
    <string name="msg_volt">Voltage</string>
    <string name="msg_miniscule">Miniscule</string>
    <string name="msg_small">Small</string>
    <string name="msg_moderate">Moderate</string>
    <string name="msg_high">High</string>
    <string name="msg_excessive">Excessive</string>
    <string name="item_fast_charge">USB Fast Charge</string>
    <string name="item_sum_fast_charge">Increase mA current during charging. Only affects non-wall chargers.</string>
    <string name="item_input_boost">Touch Boost</string>
    <string name="item_sum_input_boost">Raises the minimum processor speed while you\'re browsing. Useful to circumvent UI Lag.</string>
    <string name="item_threshold">Threshold:</string>
    <string name="item_duration_msecs">Duration (msecs)</string>
    <string name="item_frequency">Frequency</string>
    <string name="item_boost_sum">Utilizes an algorithm to determine when to boost cores. Higher the threshold, the more likely an event will trigger a boost.</string>
    <string name="msg_boost_disclaimer">Touch Boosting must be disabled while changing policies, as it may interfere with processor policies.</string>
    <string name="note_boost">Boosts are issued based off priority. Set your frequencies from greatest to least, with Processor #1 being the maximum possible boost, as it\'s the highest priority.
\n\nNote: No boost frequency should be above your maximum CPU frequency, as boosts simply raise the CPU minimum frequency.</string>
    <string name="item_proc3">Processor #3</string>
    <string name="item_proc2">Processor #2</string>
    <string name="item_proc1">Processor #1</string>
    <string name="item_io">Memory</string>
    <string name="item_iosched">I/O Scheduler</string>
    <string name="item_readahead">Read-Ahead Buffer</string>
    <string name="item_gpu">GPU</string>
    <string name="item_stat">Statistics</string>
    <string name="item_polices">Policies</string>
    <string name="item_core_manage">Power Plug Management</string>
    <string name="item_core_util">Primary Core Utilization</string>
    <string name="item_sum_core_util">Group more processes onto primary core.</string>
    <string name="item_processor_polices">Processor Policies</string>
    <string name="item_screendens">Screen Density</string>
    <string name="item_runatboot">Run At Boot</string>
    <string name="item_add_runatboot">Add to Run At Boot</string>
    <string name="item_sum_runatboot">Schedule shell commands to be executed every startup. While this is independent of Tame\'s Set On Boot, this will disable itself if the SOB disabler zip is flashed.</string>
    <string name="item_restore_cmd_now">Run Saved Commands Now</string>
    <string name="msg_restored_cmd">Commands executed.</string>
    <string name="item_note_runatboot">Commands will be executed using root permissions, so no need to request.</string>
    <string name="item_hint_runatboot">Type your shell commands here. </string>
    <string name="item_sum_runatboot_queued">Commands queued for next device boot.</string>
    <string name="item_log">Dump System Logs</string>
    <string name="item_logcat">Logcat</string>
    <string name="item_lkmsg">Last Kmsg</string>
    <string name="msg_logcat">Logcat saved to</string>
    <string name="msg_lkmsg">Last KMSG saved to</string>
    <string name="item_buildprop">Build.prop Editor</string>
    <string name="item_add_prop">New Property</string>
    <string name="item_force_prop">Force Property</string>
    <string name="item_retain_prop">Force Properties</string>
    <string name="item_apply_props_now">Apply &amp; Save</string>
    <string name="item_note_retain_prop">Automatically restore saved properties when they\'re changed (ROM change etc.)</string>
    <string name="item_hint_retain_prop">yourprop=yourvalue\nyourprop2=yourvalue2</string>
    <string name="msg_prop_update">Build.prop updated, reboot your device to apply changes.</string>
    <string name="msg_property">Property</string>
    <string name="msg_value">Value</string>
    <string name="item_sysfs">SysFS Explorer</string>
    <string name="item_sync">Synchronize</string>
    <string name="item_gov">Governor</string>
    <string name="item_min_frequency">Minimum Frequency</string>
    <string name="item_max_frequency">Maximum Frequency</string>
    <string name="msg_loading">Loading ...</string>
    <string name="msg_wait">Please Wait ...</string>
    <string name="msg_done">Done</string>
    <string name="msg_rbackup">Restore Backup</string>
    <string name="msg_nobackup">No Backup Found</string>
    <string name="item_mpdec">Mpdecision</string>
    <string name="item_sum_scroff_mpdec">Unplug secondary cores while screen off</string>
    <string name="item_note_mpdec">Mpdecision automatically plugs/unplugs cores based off workload.</string>
    <string name="item_intellip">Intelli-Plug</string>
    <string name="item_sum_scroff_intellip">Limit Screen Off Max Frequency</string>
    <string name="item_note_scroff">Don\'t lower past 500MHz, your phone has a built in Low Power Mode.</string>
    <string name="item_sum_boost_intellip">Plug extra processor during touch events</string>
    <string name="item_note_intellip">Intelli-Plug automatically plugs/unplugs cores based off workload.</string>
    <string name="item_note_core_toggle">Unplugging a processor here will disable it until you re-enable it, as oppose to allowing an SMP manager to automatically control when it\'s enabled. This has the potential to reduce power consumption, but may have also reduce performance if unbalanced. Consider raising your maximum frequency, when disabling multiple processors. This maintains a balance while still saving power.</string>
</resources>