<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal">

	    <Switch
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/item_enable"
		android:id="@+id/sob"/>

	    <CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/item_processor_polices"
		android:button="@null"
		android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
		android:id="@+id/sob_cpu"/>

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="8dp"
	    android:layout_marginBottom="8dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@color/black"/>

	<Button
	    android:id="@+id/restore_sob"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/item_restore_settings_now"
            android:layout_gravity="center_horizontal"/>

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="8dp"
	    android:layout_marginBottom="8dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@color/black"/>

	<Button
	    android:id="@+id/view_sob"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/item_view_settings"
            android:layout_gravity="center_horizontal"/>

</LinearLayout>
