<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:weightSum="1"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_runatboot"
        android:id="@+id/scripttoggle"/>
        
    <TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
        android:text="@string/item_note_runatboot"
	android:gravity="center_horizontal"
	android:textStyle="italic"
	android:textSize="11sp"/>

    <EditText
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="11sp"
	android:id="@+id/commands"
	android:hint="@string/item_hint_runatboot"
	android:inputType="textMultiLine|textNoSuggestions"/>

</LinearLayout>
