<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:weightSum="1"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal">

	<EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="20"
	    android:focusable="true"
	    android:focusableInTouchMode="true"
	    android:windowSoftInputMode="stateVisible" 
	    android:hint="@string/msg_property"
	    android:inputType="textMultiLine|textNoSuggestions"
	android:id="@+id/entry"/>

	<EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="20"
	    android:focusable="true"
	    android:focusableInTouchMode="true"
	    android:windowSoftInputMode="stateVisible" 
	    android:hint="@string/msg_value"
	    android:inputType="textMultiLine|textNoSuggestions"
	android:id="@+id/value"/>

     <Button
        android:id="@+id/positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_save"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        />

</LinearLayout>
