<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:weightSum="1"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/retaintoggle"/>

    <TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
        android:text="@string/item_note_retain_prop"
	android:gravity="center_horizontal"
	android:textStyle="italic"
	android:textSize="11sp"/>

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="8dp"
	    android:layout_marginBottom="8dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@color/black"/>\

    <EditText
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="11sp"
	android:id="@+id/properties"
	android:hint="@string/item_hint_retain_prop"
	android:inputType="textMultiLine|textNoSuggestions"/>

	<Button
	    android:id="@+id/apply_props"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/item_apply_props_now"
            android:layout_gravity="center_horizontal"/>

</LinearLayout>
