<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:id="@+id/cpu_policy_group"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	android:textSize="28sp"
	android:gravity="center"
	android:text="@string/msg_boost_disclaimer"
        android:textAppearance="?android:attr/textAppearanceMedium"
	android:textColor="@color/white"
	android:textStyle="bold"
        android:id="@+id/IBdisclaimer"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_sync"
	android:textStyle="bold"
	android:button="@null"
	android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:id="@+id/cpu_gov_sync"

        android:layout_alignParentTop="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_sync"
	android:textStyle="bold"
	android:button="@null"
	android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:id="@+id/tame_policy_sync"

        android:layout_alignParentTop="true"/>    

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="8dp"
	    android:layout_marginBottom="8dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@color/black"/>

<Spinner
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:textSize="20dp"
	android:id="@+id/cpu_core"
	android:text="@string/msg_core"
	android:layout_marginBottom="5dp"/>

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="8dp"
	    android:layout_marginBottom="8dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	android:textStyle="bold"
        android:text="@string/item_gov"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cpu_gov"
	android:layout_marginLeft="2dp"/>

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="8dp"
	    android:layout_marginBottom="8dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@color/black"/>

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal">

	  <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp">

	    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/item_min_frequency"
		android:textStyle="bold"
		android:layout_alignParentLeft="true"/>

	    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/item_max_frequency"
		android:textStyle="bold"
		android:layout_alignParentRight="true"/>

	</RelativeLayout>

	</TableRow>

	<TableRow
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal">

	  <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp">

	    <Spinner
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/cpu_min_freq"
		android:layout_alignParentLeft="true"/>

	    <Spinner
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/cpu_max_freq"
		android:layout_alignParentRight="true"/>

	</RelativeLayout>

	</TableRow>


</LinearLayout>
