<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="15dp"
    android:weightSum="1"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal">
    
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	    
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	       	    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginTop="15dp"
		    android:weightSum="1"
		    android:layout_centerHorizontal="true"
		    android:gravity="center_horizontal">
    
    	    <CheckBox
		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/item_bln_override_color"
		android:button="@null"
		android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        	android:id="@+id/touchkey_bln_override_rgb"
        	android:layout_alignParentTop="true"/>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:focusableInTouchMode="true"
	    android:focusable="true"
	    android:gravity="center_horizontal"
	    android:id="@+id/touchkey_bln_rgb_group">>
    
	<com.larswerkman.holocolorpicker.ColorPicker
    android:id="@+id/touchkey_bln_rgb"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    
    <com.larswerkman.holocolorpicker.OpacityBar
    android:id="@+id/touchkey_bln_rgb_alpha"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"/>
    
           <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="8"
            android:id="@+id/touchkey_bln_rgb_text"
            android:inputType="none"
	    android:textIsSelectable="true"
	    android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal" />

    
    </LinearLayout>

    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@color/black"/>

	    <CheckBox
		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/item_bln_override_interval"
		android:button="@null"
		android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        	android:id="@+id/touchkey_bln_override_interval"
        	android:layout_alignParentTop="true"/>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:focusableInTouchMode="true"
	    android:focusable="true"
	    android:gravity="center_horizontal"
	    android:id="@+id/touchkey_bln_override_group">>

	<TableRow
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_on"
            android:layout_marginRight="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_msecs"
            android:layout_marginRight="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_off"/>

	</TableRow>

	<TableRow
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:id="@+id/touchkey_bln_intervals">

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="4"
            android:id="@+id/touchkey_bln_on_interval"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="4"
            android:gravity="right"
            android:id="@+id/touchkey_bln_off_interval"
            android:layout_gravity="center_horizontal" />
	</TableRow>

    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@color/black"/>

    </LinearLayout>

	<Button
	    android:id="@+id/blntest"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/item_bln_test"
    	    android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"/>
            
            
    </LinearLayout>
    </ScrollView>

</LinearLayout>
